@@ -1,0 +1,1 @@
+$response.response.response.numFound
